# meh

./: README.rst  pyproject.toml
meh/: __main__.py  object.py  runtime.py
meh/modules/: find.py  fnd.py  irc.py  log.py  opm.py  rss.py  tdo.py  thr.py  upt.py  utils.py
