[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "meh"
description = "mekker"
version = "1"
authors = [
    {name = "Bart Thate", email = "bthate@dds.nl"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.scripts]
"meh" = "meh.__main__:wrapped"

[project.urls]
"home" = "https://pypi.org/project/meh"
"bugs" = "https://github.com/otpcr/meh/issues"
"source" = "https://github.com/otpcr/meh"


[tool.setuptools]
packages = [
    "meh",
    "meh.modules"
]
